source/_static/css/style.css
/* В этом файле переопределяются стандартные стили basic-темы Sphinx. В этих стилях есть сомнительные ходы, тк писать поверх темы вообще не очень правильно, а внешний вид изменить нужно */

.container-fluid {
  max-width: 1601px;
  padding: 0 70px;
}

/* container-fluid чтобы стили применились только к документации, но не к футеру */
.container-fluid h1, .container-fluid h2, .container-fluid h3, .container-fluid h4, .container-fluid h5, .container-fluid h6 {
  font-weight: normal;
  margin-top: 1rem;
  margin-bottom: 1rem;
  color: #171717;
}

.container-fluid h1 a, .container-fluid h2 a, .container-fluid h3 a, .container-fluid h4 a, .container-fluid h5 a, .container-fluid h6 a {
  color: #171717;
}

.container-fluid h2, .container-fluid h3, .container-fluid h4, .container-fluid h5, .container-fluid h6 {
  border-bottom: 1px solid #dee2e6;
  padding-bottom: 5px;
}

h1:hover > a.headerlink, h2:hover > a.headerlink, h3:hover > a.headerlink, h4:hover > a.headerlink, h5:hover > a.headerlink, h6:hover > a.headerlink, dt:hover > a.headerlink, caption:hover > a.headerlink, p.caption:hover > a.headerlink, div.code-block-caption:hover > a.headerlink {
  margin-left: 5px;
  color: #dddddd !important;
  text-decoration: none !important;
}

h1:hover > a.headerlink:hover, h2:hover > a.headerlink:hover, h3:hover > a.headerlink:hover, h4:hover > a.headerlink:hover, h5:hover > a.headerlink:hover, h6:hover > a.headerlink:hover, dt:hover > a.headerlink:hover, caption:hover > a.headerlink:hover, p.caption:hover > a.headerlink:hover, div.code-block-caption:hover > a.headerlink:hover {
  margin-left: 5px;
  color: #171717 !important;
  text-decoration: none !important;
}

a.img-link.public-integration {
  border: 0;
  display: inline-block;
  height: 57px;
  width: 750px;
}

a.img-link.public-integration:hover {
  box-shadow: rgb(150 150 150 / 40%) 1px 1px 5px 5px;
}

ul {
  padding-left: 1rem;
}

.col-body ul ul {
  padding-bottom: 1rem;
}

ul li {
  margin-bottom: 0.25rem;
}

ol li {
  margin-bottom: 0.25rem;
}

ol.arabic {
  padding-left: 1rem;
}

dd {
  margin-left: 0 !important;
}

p {
  color: #171717 !important;
  font-size: 16px;
  margin-top: 0;
  margin-bottom: 1rem;
}

.col-body p.caption {
  font-size: 1rem;
}

p.caption {
  margin-bottom: 0.25rem;
  font-weight: bold;
  color: #171717;
}

p.topic-title {
  margin-top: 0 !important;
  margin-bottom: 0.25rem;
  font-size: 1rem !important;
  color: #171717;
}

.col-sidebar {
  overflow: hidden;
  width: 300px;
  flex: 0 0 300px;
  margin-top: 14px;
  margin-right: 45px;
  padding-top: 10px;
}

.col-body {
  margin-bottom: 3rem;
}

#sidebar-wrapper ul li.current > a, #sidebar-wrapper ul li.current > a:hover {
  font-weight: bold !important;
  background-color: #e6e6e6 !important;
  margin: -3px -50px;
  padding: 3px 50px;
}

#sidebar-wrapper ul {
  padding-left: 0rem;
}

#sidebar-wrapper .toctree-l1 {
  padding-left: 0rem;
}

#sidebar-wrapper .toctree-l2, #sidebar-wrapper .toctree-l3 {
  padding-left: 0.8rem;
}


#sidebar-wrapper ul li {
  list-style-type: none;
  font-size: 0.78rem;
  margin-bottom: 0.25rem;
  margin-top: 0.2rem;
}

#sidebar-wrapper ul li a {
  display: block;
  color: #171717;
}

body {
  font-size: 16px !important;
  color: #171717 !important;
}

article, aside, figcaption, figure, footer, header, hgroup, main, nav, section, body {
  display: block;
}

.section img {
  margin: 0 0 1rem 0;
  filter: drop-shadow(0 5px 5px #ccc);
}

.highlight {
  margin: 1rem 0;
  padding: 1rem;
  background: none !important;
}

.highlight-default, .highlight-javascript, .highlight-html, .highlight-css {
  border-left: 2px solid #dee2e6;
}

table .highlight-default, table .highlight-javascript, table .highlight-html, table .highlight-css {
  border-left: none;
}

.breadcrumb {
  border-top: 1px solid #f2f2f2;
  background-color: #fff;
  margin-bottom: 0;
  padding: 0.6rem 0rem;
  margin: 0 auto;
}

.breadcrumb-delimiter {
  padding: 0 5px;
}

div.related {
  display: none;
}

/* notes */
.admonition {
  margin: 20px 0;
  padding: 20px !important;
  background-color: #fff;
  border: 1px solid #eee;
  border-left-width: 6px;
  border-radius: 3px;
}

p.admonition-title {
  margin: 0px 10px 5px 0px;
  font-weight: bold;
}

/*** notes*/

div.topic {
  background-color: #f8f9fa;
  border: 1px solid #dee2e6 !important;
  padding: 1rem 1rem 0rem 1rem !important;
  margin: 10px 0 10px 0 !important;
  width: 50%;
}

div.topic ul ul {
  padding-bottom: 0;
  margin-top: 0.25rem;
}

div.topic p {
  padding-bottom: 0;
  margin-bottom: 0.25rem;
}

.col-body .pl-left-column ul {
  list-style-type: none;
  padding-left: 0;
  margin-top: 0.25rem;
}

.col-body .pl-left-column ul li ul {
  padding-left: 1rem;
}

.col-body .pl-right-column ul {
  list-style-type: none;
  padding-left: 0;
  margin-top: 0.25rem;
}

.col-body .pl-right-column ul li ul {
  padding-left: 1rem;
}

.pl-left-column {
  float: left;
  width: 50%;
  padding: 0 5px;
}

.pl-right-column {
  float: right;
  width: 50%;
  padding: 0 5px;
}

#search-input {
  width: 100%;
  padding: 3px 3px 10px 3px;
}

.table-of-content {
  margin-top: 10px;
}

code {
  background-color: #fdeef5;
  padding: 1px 3px;
  border-radius: 3px;
}

#footer {
  padding: 0;
}

#footer p {
  color: #fff !important;
  opacity: .5 !important;
}

#footer .container-fluid {
  padding: 0 15px;
}

code, pre, tt {
  font-family: Consolas, monospace;
}

table.docutils {
  margin-bottom: 1rem;
}

table.docutils td, table.docutils th {
  padding: 10px 15px 20px !important;
  border: 1px solid #dee2e6 !important;
  font-size: 16px;
  color: #171717 !important;
}

table .highlight {
  padding: 0;
  margin: 0;
}

.single-page-nav .toctree-l1{
  list-style: none;
}

.single-page-nav .toctree-l1 > a{  
  font-weight: 700;
  font-size: 1rem;
  color: initial;
}

.single-page-nav > .caption{    
  display: none;
}

.single-page-nav > ul > li ul {
  padding-bottom: 0px;
}

.pl-left-column .single-page-nav > ul > li > ul,
.pl-right-column .single-page-nav > ul > li > ul {
  margin-top: 0.25rem;
  padding-left: 0;
}

@media (max-width: 991px) {
  .container-fluid {
    padding: 0 30px;
  }

  div.topic {
    width: 100%;
  }

  table {
    overflow-x: auto !important;
    display: block !important;
  }
}

@media (max-width: 767px) {
  h1 {
    font-size: 2rem;
  }

  .container-fluid {
    padding: 0 20px;
  }

  .container, .container-sm {
    max-width: 800px;
  }

  .pl-left-column {
    float: initial;
    width: 100%;
  }
  
  .pl-right-column {
    float: initial;
    width: 100%;
  }
}

